# surfer

./: Cargo.toml  README.md
src/: cookie.rs  lib.rs  logs.rs  request.rs  response.rs  server.rs  utils.rs
src/response/: file_response.rs  html_response.rs  json_response.rs
surfer_macros/: Cargo.toml
surfer_macros/src/: lib.rs
