[package]
name = "surfer"
version = "0.2.0"
edition = "2021"
description = "A simple web server"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["cargo"] }
futures = "0.3.30"
proc-macro2 = "1.0"
syn = { version = "^2.0", features = ["full", "derive"] }
quote = "1.0"
regex = "1.10.3"
