[package]
name = "surfer"
version = "0.3.0"
edition = "2021"
description = "A small backend \"framework\" for Rust"
authors = ["Patrand"]
license = "MIT"
readme = "README.md"
repoository = "https://github.com/Padi2312/surfer"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.34"
futures = "0.3.30"
regex = "1.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
surfer_macros = "0.1.0"

[lib]
name = "surfer"
path = "src/lib.rs"

[[bin]]
name = "test_main"
path = "bin/main_example.rs"
